[package]
name = "rabbit-mender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
deadpool-lapin = "0.11.0"
futures-lite = "1.13.0"
lapin = "2.3.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"


